# HikiVision-MVC

./: Cargo.toml  MvCameraControl.lib  README.md  Readme.txt  build.rs  wrapper.h
MVC/: CameraParams.h  MvCameraControl.h  MvErrorDefine.h  MvObsoleteInterfaces.h  ObsoleteCamParams.h  PixelType.h  convert.py
src/: config.txt  lib.rs  main.rs
src/bind/: bindings.rs  mod.rs
src/detection/: img_det.rs  mod.rs
src/imgp/: img_proc.rs  mod.rs
src/log/: logger.rs  mod.rs  tracing.log.2022-05-17  tracing.log.2022-05-18  tracing.log.2022-05-19  tracing.log.2022-05-20
