[package]
name = "MVCam11"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1"
chrono = "0.4.19"
opencv = { version = "0.63.1", features = ["clang-runtime"]}
tokio = {version = "1", features = ["full"]}
tokio-util = { version = "0.6", features = ["codec"] }
tracing = "0.1.34"
tracing-appender = "0.2.2"
tracing-subscriber = "0.3.11"
serde = { version = "1", features = ["derive"] }
serde_json = "1.0.81"

[build-dependencies]
bindgen = "0.59"